# cps-autonomous-applications

./: readme.md  source
cps-lab-workspace/devel/: .catkin  _setup_util.py  local_setup.sh
cps-lab-workspace/devel/lib/exercise1/: Publisher  Subscriber
cps-lab-workspace/devel/lib/exercise2/: emitter  receiver
cps-lab-workspace/devel/lib/exercise3/: emitter  receiver
cps-lab-workspace/devel/lib/exercise4/: emitter  receiver
cps-lab-workspace/devel/lib/exercise5/: arith_avg  geo_avg  har_avg  meadian  user_input
cps-lab-workspace/devel/lib/exercise6/: arith_avg  geo_avg  har_avg  meadian  result  user_input
cps-lab-workspace/devel/lib/exercise7/: arith_avg  geo_avg  har_avg  meadian  result  user_input
cps-lab-workspace/devel/lib/pkgconfig/: exercise1.pc  exercise2.pc  exercise3.pc  exercise4.pc  exercise5.pc  exercise6.pc  exercise7.pc
cps-lab-workspace/src/exercise1/: CMakeLists.txt
cps-lab-workspace/src/exercise1/launch/: Publisher.launch  Subscriber.launch
cps-lab-workspace/src/exercise1/src/: Publisher.cpp  Subscriber.cpp
cps-lab-workspace/src/exercise2/: CMakeLists.txt
cps-lab-workspace/src/exercise2/launch/: emitter.launch  receiver.launch
cps-lab-workspace/src/exercise2/src/: .emitter.cpp.swp  emitter.cpp
cps-lab-workspace/src/exercise3/: CMakeLists.txt
cps-lab-workspace/src/exercise3/launch/: emitter.launch  receiver.launch
cps-lab-workspace/src/exercise3/src/: emitter.cpp  receiver.cpp
cps-lab-workspace/src/exercise4/: CMakeLists.txt  package.xml
cps-lab-workspace/src/exercise4/launch/: emitter.launch  receiver.launch
cps-lab-workspace/src/exercise4/src/: .emitter.cpp.swp  emitter.cpp  receiver.cpp
cps-lab-workspace/src/exercise5/: CMakeLists.txt  package.xml
cps-lab-workspace/src/exercise5/launch/: arith_avg.launch  geo_avg.launch  har_avg.launch  meadian.launch  user_input.launch
cps-lab-workspace/src/exercise5/src/: arith_avg.cpp  geo_avg.cpp  har_avg.cpp  meadian.cpp  user_input.cpp
cps-lab-workspace/src/exercise6/: CMakeLists.txt
cps-lab-workspace/src/exercise6/launch/: middle.launch  result.launch  user_input.launch
cps-lab-workspace/src/exercise6/src/: arith_avg.cpp  geo_avg.cpp  har_avg.cpp  meadian.cpp  result.cpp
cps-lab-workspace/src/exercise7/: CMakeLists.txt
cps-lab-workspace/src/exercise7/launch/: result.launch  user_input.launch
cps-lab-workspace/src/exercise7/src/: arith_avg.cpp  geo_avg.cpp  har_avg.cpp  meadian.cpp  result.cpp  user_input.cpp
simulator/devel/: .catkin  setup.sh
simulator/devel/lib/f110_simulator/: AEB  PID  Random  gap  keyboard_teleop  keyboard_teleop_real  mux  simulator
simulator/devel/lib/pkgconfig/: f110_simulator.pc
simulator/src/f110_simulator/launch/: simulator.launch
simulator/src/f110_simulator/node/: AEB.cpp  PID.cpp  (+4 more)
(+27 files in other folders)
